# contact_graspnet

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  compile_pointnet_tfops.sh  package.xml  pyproject.toml  python_entrypoint.py
.github/workflows/: catkin-build.yml  colcon-build.yml
contact_graspnet/: __init__.py  config_utils.py  contact_grasp_estimator.py  data.py  graspnet_ros_server.py  inference.py  mesh_utils.py  scene_renderer.py  summaries.py  tf_train_ops.py  train.py  visualization_utils.py
launch/: contact_graspnet_node_launch.xml  inference_node.launch
pointnet2/tf_ops/3d_interpolation/: tf_interpolate.cpp
pointnet2/tf_ops/grouping/: tf_grouping.cpp
pointnet2/tf_ops/sampling/: tf_sampling.cpp
rosnode/: __init__.py  contact_graspnet_node.py  contact_graspnet_wrapper.py  inference_node.py  oneformer_wrapper.py  parameters.py
scripts/: python_entrypoint.py
