[tool.poetry]
name = "contact_graspnet"
version = "0.0.0"
description = ""
authors = []
maintainers = ["Elvin Yang <eyy@umich.edu>"]
readme = "README.md"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
priority = "supplemental"


[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "~3.6"
mayavi = "^4.7.1"
opencv-python-headless = "^4"
pillow = "^10.1.0"
pyqt5 = "~5.9"
pyrender = "^0.1.45"
pyside2 = "^5.15.2.1"
pyyaml = "^6.0.1"
rtree = "^1.1.0"
scipy = "~1.9"
tensorboard = "~2.12"
# Tensorflow/CUDA compatibility matrix:
# https://www.tensorflow.org/install/source#gpu
# 2.12 is the last version that is able to successfuly run
# compile_pointnet_tfops.sh without raising a VRAM OOM.
tensorflow = "~2.12"
tensorflow-estimator = "~2.12"
tqdm = "^4.66.1"

[tool.poetry.group.oneformer.dependencies]
transformers = "^4.35.2"
torch = { version = "2.1.1+cu118", source = "pytorch" }
torchvision = { version = "0.16.1+cu118", source = "pytorch" }

[tool.poetry.group.rosnode.dependencies]
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
